# rust-auth-service

./: .gitignore  Cargo.toml  README.md
src/: main.rs  route.rs
src/api/: check_version.rs  mod.rs  user.rs
src/config/: config.rs
src/database/: mongo.rs
src/handlers/: user.rs
src/helpers/: common.rs  errors.rs  form_data.rs  jwt.rs  mod.rs  obj_id_converter.rs  response.rs
src/models/: mod.rs  oauth_model.rs  refresh_token_model.rs  response_model.rs  user_model.rs
src/services/: user.rs  user_service.rs
src/utils/: jwt.rs  mod.rs  obj_id_converter.rs  response.rs
