[package]
name = "rust_auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
dotenv = "0.15.0"
bcrypt = "0.10.0"
log = "0.4"
oauth2 = "4.4.2"
jsonwebtoken = "9"
sha2 = "0.10.8"
hmac = "0.12.1"
serde_json = "1.0"
regex = "1.6"
async-trait = "0.1.78"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] } 
uuid = "1.8.0"
validator = { version="0.17.0", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
lettre = "0.11.6"
rand = "0.8.5"
axum = "0.7.5"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["sync", "bson-chrono-0_4"]
